k8s/prod.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
  namespace: time4games-prod
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/floatingpoints/backend:main
          resources:
            requests:
              memory: '128Mi'
              cpu: '0.25'
            limits:
              memory: '256Mi'
              cpu: '0.5'
