k8s/staging-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus-depl
  namespace: time4games-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      containers:
        - name: directus
          image: ghcr.io/floatingpoints/backend:main
          imagePullPolicy: Always
          resources:
            requests:
              memory: '128Mi'
              cpu: '0.25'
            limits:
              memory: '256Mi'
              cpu: '0.5'
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: directus-srv
  namespace: time4games-staging
spec:
  selector:
    app: directus
  ports:
    - name: directus
      protocol: TCP
      port: 8055
      targetPort: 8055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus-ingress
  namespace: time4games-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  tls:
    - hosts:
        - api-staging.time4.games
      secretName: directus-cert-tls
  rules:
    - host: api-staging.time4.games
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: directus-srv
                port:
                  number: 8055
